GoalTracker/force-app/main/default/objects/Campaign_Target_Setting__mdt/Campaign_Target_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Campaign Target Setting</label>
    <pluralLabel>Campaign Target Settings</pluralLabel>
</CustomObject>