GoalTracker/force-app/main/default/objects/Campaign_Target_Setting__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>