GoalTracker/force-app/main/default/objects/Campaign_Target_Setting__mdt/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Weight</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>